Fixed minor spacing issue on work page

--- a/src/styles/mywork.scss
+++ b/src/styles/mywork.scss
@@ -5,10 +5,6 @@
 
 .recent-work {
   width: 100%;
-  display: grid;
-  grid-template-columns: 100%;
-  grid-gap: 1rem;
-  display: grid;
 }
 
 .work-project {
